2019-03-14  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>

	* 0.5.4 update.sh: cron ではなく、コマンド at に 55 \pm 10 で
		自分自身を呼び出すスクリプト。

	* env/.placeholder: 動作に必要な環境変数を .placeholder に書いておく。

	* who-is-on-app.rkt: 127.0.0.1 しかリッスンしない。
	;(run #:listen-ip #f #:port 8000)
	(run #:port 8000)

	* who-is-on-update.rkt: (pad mac) mac アドレス中のゼロを保管する。

	* 0.5.3.2 bugfix
	/bin/sh には source コマンドがない。bash にはある。
	fix typo, who-is-in → who-is-on

	* 0.5.3 /users/new, /users/create
	update.sh スクリプト。
	who-is-on-app.rkt: ページにバージョン表示。
	update Makefile

	* [0.5.4] cron で決め打ちではなく、
	プラスマイナス n 分 で Mac アドレス採集する。

	* [0.5.3] ユーザの追加ができる。

	* [0.5.3] 括弧つきのバージョン番号は「これから」の意味に使おう。
	予定って意味。

2019-03-13  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>

	* [0.5] （外から curlで）動作確認。http://vm2019.local/who/users など。

	* conf/: crontab -l と nginx/site-enable/who-is-in の中身。

	* [0.4.1] update README.md

	* who-is-on-app.rkt: rewrite get /users use with-output-to-string.

	* who-is-on-update.rkt: rename from who-is-on.rkt

	* who-is-on-seed.rkt: rename from seed.rkt

	* who-is-on-app.rkt: rename from app.rkt

	* who-is-on.rkt: arp エントリーが incomplete な時はインサートしない。

	* [0.3.1] Makefile (git remote set-url origin ssh):
	リモートリポジトリを切り替える ds218j と syno2

	* mac addr ではなく、user.id を記録するようにするか。
	有効な user.id だけを記録する方がいいか。
	user.name でも。DB容量的には id だが。
	pings? も復活させる。